--- a/impl.tex
+++ b/impl.tex
@@ -2,7 +2,7 @@
 \begin{figure*}[t]
     \centering
     \includegraphics[width=2\columnwidth]{img/bundler-diagram}
-    \caption{\name Implementation Overview.}\label{fig:bundler}
+    \caption{\name Implementation Overview. \an{replace this}}\label{fig:bundler}
 \end{figure*}
 
 \cut{The prevalence of middleboxes today means that there are multiple options for implementing a \name \radhika{cut this line?}.}
