--- a/ref.bib
+++ b/ref.bib
@@ -5,6 +5,17 @@
   year = 2018, 
 }
 
+@article{e2e-principle,
+    author={Saltzer, J. H. and Reed, D. P. and Clark, D. D.},
+    title={{End-to-End Arguments in System Design}},
+    journal={Transactions on Computer Systems},
+    volume={2},
+    number={4},
+    pages={277--288},
+    year={1984},
+    publisher={ACM}
+}
+
 @inproceedings{swan,
     author = {Hong, Chi-Yao and Kandula, Srikanth and Mahajan, Ratul and Zhang, Ming and Gill, Vijay and Nanduri, Mohan and Wattenhofer, Roger},
     title = {{{A}chieving {H}igh {U}tilization with {S}oftware-driven {W}AN}},
@@ -1413,6 +1424,12 @@ note = {[Online, Retrieved August 3, 2017]}
     howpublished = {\url{https://www.netronome.com/products/agilio-lx/}},
 }
 
+@inproceedings{qcn,
+    author = {Alizadeh, Mohammad and Atikoglu, Berk and  Kabbani,Abdul and Lakshmikantha,Ashvin and Pan, Rong and Prabhakar, Balaji and Mick Seaman},
+    title = {{Data Center Transport Mechanisms:Congestion Control Theory and IEEE Standardization}},
+    booktitle = {Allerton Conference},
+    year = {2008},
+}
 
 @inproceedings{dcqcn,
 	author = {Zhu, Yibo and Eran, Haggai and Firestone, Daniel and Guo, Chuanxiong and Lipshteyn, Marina and Liron, Yehonatan and Padhye, Jitu and Raindel, Shachar and Yahia, Mohamad Haj and Zhang, Ming},
